--- a/index.html
+++ b/index.html
@@ -261,12 +261,26 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="nav-item">
+                            <!--dfkvnfnvinerifnv-->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Pages <i class="fa-solid fa-chevron-down ms-2"></i>
+                                </a>
+                                <ul class="dropdown-menu border-0 shadow-lg animate slideIn rounded-3 mt-2">
+
+                                    <li><a class="dropdown-item px-3 py-2" href="gallery.html">Gallery</a></li>
+                                    <li><a class="dropdown-item px-3 py-2"
+                                            href="https://www.playabacusindia.com/blog.html">Blog</a></li>
+
+                                </ul>
+                            </li>
+                            <!--<li class="nav-item">
                                 <a class="nav-link" href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.playabacusindia.com/blog.html">Blog</a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="contact-us.html">Contact Us</a>
                             </li>
@@ -275,7 +289,7 @@
                         <!-- Desktop CTA -->
                         <div class="d-none d-xl-flex align-items-center">
                             <a href="contact-us.html"
-                                class="btn btn-warning text-dark fw-bold rounded-pill px-4 shadow-sm">
+                                class="btn btn-warning text-nowrap text-dark fw-bold rounded-pill px-3 shadow-sm">
                                 Enquire Now
                             </a>
                         </div>
