--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 gap-1 gap-xl-3 fw-semibold">
+                        <ul class="navbar-nav justify-content-xl-center flex-grow-1 pe-3 gap-1 gap-xl-3 fw-semibold">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
