--- a/index.html
+++ b/index.html
@@ -510,12 +510,12 @@
                             class="d-flex justify-content-center align-items-center text-center flex-column w-100 course-content-box banner-content-box">
                             <h6>Skill-Based Learning​</h6>
                             <h2>Popular Courses in India</h2>
-                            <p>We offer abacus, abacus maths, abacus
+                            <p style="color: white;"> We offer abacus, abacus maths, abacus
                                 mastermind, and childs abacus classes for ages 4–14. Find
                                 expert-led programs near you by searching abacus near me.</p>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class=" col-12">
                         <div class="swiper courses-slide ">
                             <div class="swiper-wrapper align-items-center pb-5">
                                 <div class="swiper-slide">
@@ -545,7 +545,8 @@
                                             <img src="images/brandslogo/2.png" alt="Vedic Maths Logo"
                                                 class="course-logo">
                                             <h4>Vedic Maths</h4>
-                                            <p class="m-0">Boost calculation speed and confidence with easy techniques
+                                            <p class="m-0">Boost calculation speed and confidence with easy
+                                                techniques
                                                 that make math faster and fun.</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center w-100 ps-3">
@@ -564,7 +565,8 @@
                                             style="--course-img: url(images/banner/3.webp);">
                                             <img src="images/brandslogo/3.png" alt="Arka Kids Logo" class="course-logo">
                                             <h4>Arka Kids</h4>
-                                            <p class="m-0">Nurturing creativity, logic, and emotional skills in children
+                                            <p class="m-0">Nurturing creativity, logic, and emotional skills in
+                                                children
                                                 through engaging activities.</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center w-100 ps-3">
@@ -604,7 +606,8 @@
                                             <img src="images/brandslogo/5.png" alt="Phonic Star Logo"
                                                 class="course-logo">
                                             <h4>Phonic Star</h4>
-                                            <p class="m-0">Learn fluent English communication with a strong foundation
+                                            <p class="m-0">Learn fluent English communication with a strong
+                                                foundation
                                                 in UK standards and style.</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center w-100 ps-3">
@@ -644,7 +647,8 @@
                                             <img src="images/brandslogo/7.png" alt="Brite English Logo"
                                                 class="course-logo">
                                             <h4>Brite English</h4>
-                                            <p class="m-0">Brighten English skills with a fun, interactive approach to
+                                            <p class="m-0">Brighten English skills with a fun, interactive approach
+                                                to
                                                 grammar and vocabulary.</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center w-100 ps-3">
@@ -684,7 +688,8 @@
                                             <img src="images/brandslogo/abacus.svg" alt="My Math Fort Logo"
                                                 class="course-logo">
                                             <h4>My Math Fort</h4>
-                                            <p class="m-0">Make math simple and enjoyable with lessons that strengthen
+                                            <p class="m-0">Make math simple and enjoyable with lessons that
+                                                strengthen
                                                 core concepts.</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center w-100 ps-3">
@@ -836,7 +841,7 @@
                             </div>
                             <div class="col-12 col-md-5 col-lg-5">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
-                                    <img class="w-100 rounded-3" src="images/learn/1.jpg"
+                                    <img class="w-100 rounded-3" src="./images/home/become a partner.JPG"
                                         alt="Abacus class and Franchises">
                                 </div>
                             </div>
@@ -896,7 +901,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
                             class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box">
-                            <img class="w-100" src="images/competition-events/3.jpg" alt="Abacus class and Franchises">
+                            <img class="w-100" src="./images/home/APR63028.JPG" alt="Abacus class and Franchises">
                             <div class="competition-box p-3">
                                 <h6>INTERNATIONAL LEVEL COMPETITION</h6>
                                 <hr class="border border-warning border-1 opacity-100">
@@ -916,7 +921,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
                             class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box featured-event">
-                            <img class="w-100" src="images/competition-events/2.jpg" alt="Abacus class and Franchises">
+                            <img class="w-100" src="./images/home/nlc.jpg" alt="Abacus class and Franchises">
                             <div class="competition-box p-3">
                                 <h6>21ST NATIONAL LEVEL ABACUS & MENTAL ARITHMETIC ONLINE COMPETITION - 2026</h6>
                                 <hr class="border border-warning border-1 opacity-100">
@@ -1151,15 +1156,15 @@
     <!-- footer -->
     <footer class="container-fluid pt-5 px-0">
         <div class="row g-4 gy-5">
-            <div class="col-12 col-md-6 col-lg-2 order-lg-1 order-md-2 order-2">
-                <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
+            <div class="col-12 col-sm-6 col-lg-2">
+                <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box">
                     <h4>Quick Links</h4>
-                    <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
+                    <div class="d-flex align-items-start w-100 flex-column gap-3">
                         <a href="index.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Home</a>
                         <a href="about-us.html" class="fot-a"><i class="bi bi-chevron-right small"></i> About US</a>
                         <a href="gallery.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Gallery</a>
-                        <a href="blog.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Blog</a>
-                        <a href="events.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Events</a>
+                        <a href="https://www.playabacusindia.com/blog.html" class="fot-a"><i
+                                class="bi bi-chevron-right small"></i> Blog</a>
                         <a href="franchise.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Franchisee</a>
                         <a href="contact-us.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Contact
@@ -1167,33 +1172,27 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 order-lg-2 order-md-3 order-3">
-                <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
+            <div class="col-12 col-sm-6 col-lg-2">
+                <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box">
                     <h4>Our Courses</h4>
-                    <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
+                    <div class="d-flex align-items-start w-100 flex-column gap-3">
                         <a href="our-courses/abacus.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Abacus</a>
                         <a href="our-courses/speed-arithmetic.html" class="fot-a"><i
-                                class="bi bi-chevron-right small"></i> Vedic Mathematics</a>
+                                class="bi bi-chevron-right small"></i> Vedic Maths</a>
                         <a href="our-courses/arka-kids.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Arka Kids</a>
                         <a href="our-courses/creative-arts-india.html" class="fot-a"><i
-                                class="bi bi-chevron-right small"></i> Creative Art India</a>
+                                class="bi bi-chevron-right small"></i> Creative Art</a>
                         <a href="our-courses/phonics-star.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
-                            Phonics Spark</a>
+                            Phonics</a>
                         <a href="our-courses/handwriting.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Handwriting</a>
-                        <a href="our-courses/brite-english.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
-                            Brite English</a>
-                        <a href="our-courses/brain-tree.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
-                            Brain Tree</a>
-                        <a href="our-courses/my-math.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
-                            My Math</a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 order-lg-3 order-md-4 order-4">
-                <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
+            <div class="col-12 col-lg-4">
+                <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box">
                     <h4>Our Branches</h4>
                     <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-2 state-box">
                         <a href="our-branches/abacus-in-andhra-pradesh.html">Andhra Pradesh</a>
@@ -1201,38 +1200,33 @@
                         <a href="our-branches/abacus-in-karnataka.html">Karnataka</a>
                         <a href="our-branches/abacus-in-kerala.html">Kerala</a>
                         <a href="our-branches/abacus-in-maharashtra.html">Maharashtra</a>
-                        <a href="our-branches/abacus-in-punjab.html">Punjab</a>
-                        <a href="our-branches/abacus-in-rajasthan.html">Rajasthan</a>
                         <a href="our-branches/abacus-in-tamilnadu.html">Tamil Nadu</a>
                         <a href="our-branches/abacus-in-telangana.html">Telangana</a>
                         <a href="our-branches/abacus-in-west-bengal.html">West Bengal</a>
-                        <a href="our-branches/abacus-in-andaman-and-nicobar-islands.html">Andaman and Nicobar
-                            Islands</a>
-                        <a href="our-branches/abacus-in-delhi.html">Delhi</a>
+                        <a href="our-branches/abacus-in-india.html"
+                            class="fw-bold text-white opacity-100 border-accent">India</a>
                     </div>
                 </div>
-                <div
-                    class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box mt-5">
+                <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box mt-4">
                     <h4>Global Presence</h4>
                     <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-2 state-box">
-                        <a href="our-branches/abacus-in-india.html">India</a>
                         <a href="our-branches/abacus-in-zimbabwe.html">Zimbabwe</a>
                         <a href="our-branches/abacus-in-south-africa.html">South Africa</a>
                         <a href="our-branches/abacus-in-australia.html">Australia</a>
-                        <a href="our-branches/abacus-in-united-arab-emirates.html">United Arab Emirates</a>
+                        <a href="our-branches/abacus-in-united-arab-emirates.html">UAE</a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 order-lg-4 order-md-1 order-1">
-                <div
-                    class="d-flex justify-content-center align-items-center w-100 flex-column gap-5 footer-content-box">
-                    <a href="https://www.playabacusindia.com/"><img class="w-100"
-                            src="https://www.playabacusindia.com/images/logo.jpg" alt="logo"></a>
-                    <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
-                        <a href="https://maps.app.goo.gl/2zDLx1TKKpa7nPZQ6" class="fot-a align-items-start">
+            <div class="col-12 col-lg-4">
+                <div class="d-flex align-items-start w-100 flex-column gap-4 footer-content-box">
+                    <a href="https://www.playabacusindia.com/" class="mb-2"><img
+                            src="https://www.playabacusindia.com/images/logo.jpg" alt="logo"
+                            style="max-height: 60px; width: auto; border-radius: 8px;"></a>
+                    <div class="d-flex align-items-start w-100 flex-column gap-3">
+                        <a href="https://maps.app.goo.gl/2zDLx1TKKpa7nPZQ6" class="fot-a align-items-start lh-base">
                             <i class="bi bi-geo-alt-fill mt-1"></i>
-                            <span>No.14, Thiruvika 3rd Street, Royapettah high road, Mylapore, Chennai - 600 004,
-                                Tamil Nadu, India.</span>
+                            <span>No.14, Thiruvika 3rd Street, Royapettah high road, Mylapore, Chennai - 600 004, Tamil
+                                Nadu, India.</span>
                         </a>
                         <a href="tel:919940416989" class="fot-a">
                             <i class="bi bi-phone-fill"></i> +91 99404 16989
@@ -1241,15 +1235,8 @@
                             <i class="bi bi-envelope-at-fill"></i> contact@playabacusindia.com
                         </a>
                     </div>
-                    <div class="d-flex justify-content-start me-auto align-items-center gap-2 imporatnt-links">
-                        <a href="https://www.playabacusindia.com/terms-and-conditions.html" class="fot-a">Terms &
-                            conditions</a> |
-                        <a href="https://www.playabacusindia.com/copyright-policy.html" class="fot-a">Copyright
-                            Policy</a>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon"
+                    <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <h6 class="m-0 me-2 text-white-50">Follow US:</h6>
                         <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
                                 src="images/socialicons/facebook.svg" alt="Facebook"></a>
                         <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
