--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
                             class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box">
-                            <img class="w-100" src="./images/home/APR63028.JPG" alt="Abacus class and Franchises">
+                            <img class="w-100" src="./images/home/withcm.jpg" alt="Abacus class and Franchises">
                             <div class="competition-box p-3">
                                 <h6>INTERNATIONAL LEVEL COMPETITION</h6>
                                 <hr class="border border-warning border-1 opacity-100">
