--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
             <div class="col-12 col-sm-6 col-lg-2">
                 <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box">
                     <h4>Quick Links</h4>
-                    <div class="d-flex align-items-start w-100 flex-column gap-3">
+                    <div class="d-flex align-items-start w-100 flex-column gap-4">
                         <a href="index.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Home</a>
                         <a href="about-us.html" class="fot-a"><i class="bi bi-chevron-right small"></i> About US</a>
                         <a href="gallery.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Gallery</a>
@@ -1202,6 +1202,11 @@
                         <a href="our-branches/abacus-in-maharashtra.html">Maharashtra</a>
                         <a href="our-branches/abacus-in-tamilnadu.html">Tamil Nadu</a>
                         <a href="our-branches/abacus-in-telangana.html">Telangana</a>
+                        <a href="our-branches/abacus-in-punjab.html">Punjab</a>
+                        <a href="our-branches/abacus-in-rajasthan.html">Rajasthan</a>
+                        <a href="our-branches/abacus-in-west-delhi.html">Delhi</a>
+                        <a href="our-branches/abacus-in-andaman-and-nicobar-islands.html">Andaman and Nicobar
+                            Islands</a>
                         <a href="our-branches/abacus-in-west-bengal.html">West Bengal</a>
                         <a href="our-branches/abacus-in-india.html"
                             class="fw-bold text-white opacity-100 border-accent">India</a>
@@ -1210,6 +1215,7 @@
                 <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box mt-4">
                     <h4>Global Presence</h4>
                     <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-2 state-box">
+                        <a href="our-branches/abacus-in-india.html">India</a>
                         <a href="our-branches/abacus-in-zimbabwe.html">Zimbabwe</a>
                         <a href="our-branches/abacus-in-south-africa.html">South Africa</a>
                         <a href="our-branches/abacus-in-australia.html">Australia</a>
