--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                     <div class="hero-image-wrapper position-relative text-center slide-in-right">
                                         <!-- Main Image -->
                                         <div class="hero-img-container">
-                                            <img src="images/about-us/kid-with-abacus.jpeg" alt="Child learning abacus"
+                                            <img src="./images/home/hero.webp" alt="Child learning abacus"
                                                 class="img-fluid rounded-4 shadow-premium hero-main-img">
                                         </div>
 
