--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   "name": "Ideal Play Abacus India",
   "alternateName": "IPA",
   "url": "https://www.playabacusindia.com",
-  "logo": "https://www.playabacusindia.com/path-to-logo.png",
+  "logo": "https://www.playabacusindia.com/images/logo.jpg",
   "sameAs": [
     "https://www.facebook.com/idealplayabacus",
     "https://www.instagram.com/idealplayabacus",
