--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Primary Meta Tags -->
     <title>Best Abacus Classes & Abacus Franchise in India | IPA</title>
     <meta name="description"
-        content="Join the best abacus online classes in India. Explore abacus classes in Delhi, Hyderabad, Madurai, Jaipur & more. Start your own franchise with low investment.">
+        content="Join India's best abacus training program. Explore top-rated abacus online classes and franchise opportunities with Ideal Play Abacus (IPA). Start your genius journey today!">
     <meta name="keywords"
-        content="best abacus online classes in india, abacus classes in delhi, abacus classes in hyderabad, abacus classes in madurai, abacus classes in jaipur, abacus classes in trivandrum, abacus classes in visakhapatnam, abacus classes in lucknow, abacus classes in pondicherry, abacus classes in trichy, abacus classes in udaipur, abacus franchise in india, low investment franchise in education, abacus franchise opportunities, best education franchise, abacus franchise business">
+        content="best abacus training in india, abacus classes online, abacus franchise opportunities, vedic maths for kids, mental arithmetic classes, children brain development, abacus classes near me">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.playabacusindia.com/">
@@ -96,6 +96,61 @@
   }
 }
 </script>
+    <!--<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Ideal Play Abacus India",
+  "image": "https://www.playabacusindia.com/images/home/hero.webp",
+  "@id": "https://www.playabacusindia.com",
+  "url": "https://www.playabacusindia.com",
+  "telephone": "+91-9940416989",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "No 14, Thiru Vi Ka 3rd St, Nagarathinam Colony",
+    "addressLocality": "Mylapore",
+    "addressRegion": "Tamil Nadu",
+    "postalCode": "600004",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 13.0333,
+    "longitude": 80.2667
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday"
+    ],
+    "opens": "09:00",
+    "closes": "18:00"
+  },
+  "sameAs": [
+    "https://www.facebook.com/idealplayabacus",
+    "https://www.instagram.com/idealplayabacus",
+    "https://x.com/PlayAbacus"
+  ]
+}
+</script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Course",
+  "name": "Abacus Training Program",
+  "description": "Premium abacus training for children aged 4-14 to boost memory, focus, and calculation speed.",
+  "provider": {
+    "@type": "Organization",
+    "name": "Ideal Play Abacus India",
+    "sameAs": "https://www.playabacusindia.com/"
+  }
+}
+</script>-->
 
     <!-- Bootstrap -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" as="style"
@@ -210,8 +265,8 @@
             <div class="container">
                 <!-- Brand Logo -->
                 <a class="navbar-brand me-4" href="index.html">
-                    <img src="https://www.playabacusindia.com/images/logo.jpg" alt="Ideal Play Abacus"
-                        style="height: 50px; width: auto;">
+                    <img src="https://www.playabacusindia.com/images/logo.jpg"
+                        alt="Ideal Play Abacus India - Best Abacus Training" style="height: 50px; width: auto;">
                 </a>
 
                 <!-- Mobile Toggler -->
@@ -224,7 +279,8 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header border-bottom">
-                        <img src="images/brandslogo/1.png" alt="Ideal Play Abacus" style="height: 40px; width: auto;">
+                        <img src="images/brandslogo/1.png" alt="IPA Abacus Brand Logo"
+                            style="height: 40px; width: auto;">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
@@ -336,8 +392,8 @@
                                         </div>
                                         <h1 class="display-5 display-lg-4 fw-bold mb-4 text-dark hero-title fade-in-up"
                                             style="animation-delay: 0.2s;">
-                                            Unlock Your Child's <br>
-                                            <span class="text-gradient">Genius Potential</span>
+                                            Best Abacus Training to <br>
+                                            <span class="text-gradient">Unlock Your Child's Genius</span>
                                         </h1>
                                         <p class="lead text-secondary mb-5 hero-text fade-in-up"
                                             style="animation-delay: 0.3s;">
@@ -361,7 +417,8 @@
                                     <div class="hero-image-wrapper position-relative text-center slide-in-right">
                                         <!-- Main Image -->
                                         <div class="hero-img-container">
-                                            <img src="./images/home/hero.webp" alt="Child learning abacus"
+                                            <img src="./images/home/hero.webp"
+                                                alt="Child learning abacus - Best Abacus Online Classes in India"
                                                 class="img-fluid rounded-4 shadow-premium hero-main-img">
                                         </div>
 
@@ -509,7 +566,7 @@
                         <div
                             class="d-flex justify-content-center align-items-center text-center flex-column w-100 course-content-box banner-content-box">
                             <h6>Skill-Based Learning​</h6>
-                            <h2>Popular Courses in India</h2>
+                            <h2 style="color: var(--secondary-clr);">Popular Courses in India</h2>
                             <p style="color: white;"> We offer abacus, abacus maths, abacus
                                 mastermind, and childs abacus classes for ages 4–14. Find
                                 expert-led programs near you by searching abacus near me.</p>
@@ -523,7 +580,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/1.webp);">
-                                            <img src="images/brandslogo/1.png" alt="Abacus Logo" class="course-logo">
+                                            <img src="images/brandslogo/1.png" alt="Ideal Play Abacus Training Course"
+                                                class="course-logo">
                                             <h4>Abacus</h4>
                                             <p class="m-0">Master mental math skills with Abacus training, building
                                                 speed, accuracy, and focus.</p>
@@ -542,8 +600,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/2.webp);">
-                                            <img src="images/brandslogo/2.png" alt="Vedic Maths Logo"
-                                                class="course-logo">
+                                            <img src="images/brandslogo/2.png"
+                                                alt="Vedic Maths Classes for Kids in India" class="course-logo">
                                             <h4>Vedic Maths</h4>
                                             <p class="m-0">Boost calculation speed and confidence with easy
                                                 techniques
@@ -563,7 +621,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/3.webp);">
-                                            <img src="images/brandslogo/3.png" alt="Arka Kids Logo" class="course-logo">
+                                            <img src="images/brandslogo/3.png" alt="Arka Kids Creative Learning Program"
+                                                class="course-logo">
                                             <h4>Arka Kids</h4>
                                             <p class="m-0">Nurturing creativity, logic, and emotional skills in
                                                 children
@@ -583,8 +642,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/5.webp);">
-                                            <img src="images/brandslogo/4.png" alt="Creative Arts India Logo"
-                                                class="course-logo">
+                                            <img src="images/brandslogo/4.png"
+                                                alt="Creative Arts India - Kids Art Program" class="course-logo">
                                             <h4>Creative Arts India</h4>
                                             <p class="m-0">Inspiring young minds through colorful art programs that
                                                 unlock imagination and talent.</p>
@@ -603,7 +662,7 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/6.webp);">
-                                            <img src="images/brandslogo/5.png" alt="Phonic Star Logo"
+                                            <img src="images/brandslogo/5.png" alt="Phonic Star English Fluency Program"
                                                 class="course-logo">
                                             <h4>Phonic Star</h4>
                                             <p class="m-0">Learn fluent English communication with a strong
@@ -624,7 +683,7 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/7.webp);">
-                                            <img src="images/brandslogo/6.png" alt="Handwriting Logo"
+                                            <img src="images/brandslogo/6.png" alt="Handwriting Improvement Course"
                                                 class="course-logo">
                                             <h4>Handwriting</h4>
                                             <p class="m-0">Improve handwriting with effective practice that builds
@@ -644,8 +703,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/8.webp);">
-                                            <img src="images/brandslogo/7.png" alt="Brite English Logo"
-                                                class="course-logo">
+                                            <img src="images/brandslogo/7.png"
+                                                alt="Brite English Grammar and Vocabulary Course" class="course-logo">
                                             <h4>Brite English</h4>
                                             <p class="m-0">Brighten English skills with a fun, interactive approach
                                                 to
@@ -665,7 +724,7 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/9.webp);">
-                                            <img src="images/brandslogo/8.png" alt="Brain Tree Logo"
+                                            <img src="images/brandslogo/8.png" alt="Brain Tree Cognitive Training"
                                                 class="course-logo">
                                             <h4>Brain Tree</h4>
                                             <p class="m-0">Sharpen thinking, memory, and problem-solving through
@@ -685,8 +744,8 @@
                                         class="d-flex justify-content-center align-items-center w-100 flex-column course-main-box">
                                         <div class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4"
                                             style="--course-img: url(images/banner/1.webp);">
-                                            <img src="images/brandslogo/abacus.svg" alt="My Math Fort Logo"
-                                                class="course-logo">
+                                            <img src="images/brandslogo/abacus.svg"
+                                                alt="My Math Fort Educational Support" class="course-logo">
                                             <h4>My Math Fort</h4>
                                             <p class="m-0">Make math simple and enjoyable with lessons that
                                                 strengthen
