--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                                 src="images/socialicons/facebook.svg" alt="Facebook"></a>
                         <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
                                 src="images/socialicons/instagram.svg" alt="Instagram"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x.svg"
+                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
                                 alt="X"></a>
                         <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
                                 src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
