--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -350,7 +350,7 @@
                                 src="images/socialicons/facebook.svg" alt="Facebook"></a>
                         <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
                                 src="images/socialicons/instagram.svg" alt="Instagram"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x.svg"
+                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
                                 alt="X"></a>
                         <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
                                 src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
@@ -443,7 +443,7 @@
                             required type="tel">
                     </div>
                 </div>
-                <!-- Simplified Static Captcha -->
+                <!-- Simplified Static Captcha for Mobile UX -->
                 <div class="col-12">
                     <div class="d-flex align-items-center gap-2">
                         <div
@@ -460,8 +460,13 @@
         </div>
     </div>
 
-    <!-- Scripts -->
+    <!-- Bootstrap -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://www.playabacusindia.com/js/swiper.js"></script>
+
+    <!-- custom js -->
     <script src="js/script.js"></script>
 
     <!-- Back to Top Button -->
@@ -472,6 +477,7 @@
     <script>
         // Back to Top functionality
         const backToTopButton = document.getElementById("backToTop");
+
         window.onscroll = function () {
             if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
                 backToTopButton.classList.add("show");
@@ -479,8 +485,12 @@
                 backToTopButton.classList.remove("show");
             }
         };
+
         backToTopButton.onclick = function () {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
         };
     </script>
 </body>
