--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
                         <!-- Desktop CTA -->
                         <div class="d-none d-xl-flex align-items-center">
-                            <a href="contact-us.html"
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
                                 class="btn btn-warning text-nowrap text-dark fw-bold rounded-pill px-3 shadow-sm">
                                 Enquire Now
                             </a>
@@ -346,7 +346,8 @@
 
                         <!-- Mobile Only Footer in Menu -->
                         <div class="d-xl-none mt-4">
-                            <a href="contact-us.html" class="btn btn-primary w-100 rounded-pill mb-3">Enquire Now</a>
+                            <a href="#contactOffcanvas" data-bs-toggle="offcanvas"
+                                class="btn btn-primary w-100 rounded-pill mb-3">Enquire Now</a>
                             <div class="d-flex justify-content-center gap-3 fs-4 mt-3 flex-wrap">
                                 <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" class="text-secondary"><i
                                         class="fa-brands fa-facebook"></i></a>
@@ -402,7 +403,8 @@
                                         </p>
                                         <div class="d-flex justify-content-center justify-content-lg-start gap-3 fade-in-up"
                                             style="animation-delay: 0.4s;">
-                                            <a href="contact-us.html" class="theme-btn-2 text-decoration-none">
+                                            <a href="#contactOffcanvas" data-bs-toggle="offcanvas"
+                                                class="theme-btn-2 text-decoration-none">
                                                 <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
                                             </a>
                                             <a href="#about-us" class="theme-btn btn-outline-primary hover-lift">
@@ -1424,6 +1426,70 @@
 
     <!-- custom js -->
     <script src="js/script.js"></script>
+
+    <!-- Enquire Now Modal -->
+    <div class="modal fade" id="enquiryModal" tabindex="-1" aria-labelledby="enquiryModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title fw-bold txt-primary-clr" id="enquiryModalLabel">Get in Touch</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-4">
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label fw-semibold">I'm interested in:</label>
+                            <div class="d-flex gap-3 flex-wrap">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="inquiry_type" id="modalFranchise"
+                                        value="Franchise Inquiry" required checked>
+                                    <label class="form-check-label" for="modalFranchise">Franchise</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="inquiry_type" id="modalStudent"
+                                        value="Student Inquiry">
+                                    <label class="form-check-label" for="modalStudent">Student</label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="inquiry_type" id="modalOther"
+                                        value="Others">
+                                    <label class="form-check-label" for="modalOther">Others</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <input id="modal-name" class="form-control" placeholder="Your Name" pattern="\d{10}"
+                                required type="text">
+                        </div>
+                        <div class="mb-3">
+                            <input id="modal-email" class="form-control" placeholder="Your E-Mail" required
+                                type="email">
+                        </div>
+                        <div class="mb-3">
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" style="width: 20px;">
+                                    <span class="ms-1 small">+91</span>
+                                </span>
+                                <input id="modal-phone" class="form-control border-start-0 ps-0"
+                                    placeholder="Phone Number" required type="tel">
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <textarea placeholder="Your Message" class="form-control" id="modal-message" name="message"
+                                rows="3" required oninput="limitLetters(this, 100)"></textarea>
+                            <div id="wordCountMsg" class="text-muted small text-end mt-1">0 / 100</div>
+                        </div>
+
+                        <button id="modalSendBtn" type="button"
+                            class="btn theme-btn bg-btn w-100 rounded-pill fw-bold py-2">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
