--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Courses <i class="fa-solid fa-chevron-down ms-2"></i>
+                                    Courses <i class="fa-solid fa-chevron-down"></i>
                                 </a>
                                 <ul class="dropdown-menu border-0 shadow-lg animate slideIn rounded-3 mt-2">
                                     <li><a class="dropdown-item px-3 py-1" href="our-courses/abacus.html">Abacus</a>
@@ -264,7 +264,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Pages <i class="fa-solid fa-chevron-down ms-2"></i>
+                                    Pages <i class="fa-solid fa-chevron-down"></i>
                                 </a>
                                 <ul class="dropdown-menu border-0 shadow-lg animate slideIn rounded-3 mt-2">
 
