--- a/events.html
+++ b/events.html
@@ -284,6 +284,10 @@
 
                         <!-- Mobile Only Footer in Menu -->
                         <div class="d-xl-none mt-4">
+                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
+                                class="btn btn-warning w-100 rounded-pill mb-2 fw-bold text-dark shadow-sm">
+                                <i class="fa-solid fa-user-lock me-2"></i> Franchise Login
+                            </a>
                             <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
                                 class="btn btn-primary w-100 rounded-pill mb-3">Enquire Now</a>
                             <div class="d-flex justify-content-center gap-3 fs-4 mt-3 flex-wrap">
