--- a/index.html
+++ b/index.html
@@ -279,6 +279,36 @@
                             </li>
                         </ul>
 
+                        <!-- Divider -->
+                        <hr class="d-xl-none my-3 opacity-25">
+
+                        <!-- Mobile Contact Info -->
+                        <div class="d-xl-none mb-4">
+                            <h6 class="text-muted fw-bold small text-uppercase mb-3 px-2" style="letter-spacing: 1px;">
+                                Contact Us</h6>
+                            <div class="d-flex flex-column gap-3 px-2">
+                                <a href="tel:919940416989"
+                                    class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
+                                    <div class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center"
+                                        style="width: 35px; height: 35px;">
+                                        <i class="fa-solid fa-phone text-secondary fs-6"></i>
+                                    </div>
+                                    <span class="fw-semibold">+91 99404 16989</span>
+                                </a>
+                                <a href="mailto:contact@playabacusindia.com"
+                                    class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
+                                    <div class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center"
+                                        style="width: 35px; height: 35px;">
+                                        <i class="fa-solid fa-envelope text-secondary fs-6"></i>
+                                    </div>
+                                    <span class="fw-semibold">contact@playabacusindia.com</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Divider -->
+                        <hr class="d-xl-none my-4 opacity-25">
+
                         <!-- Desktop CTA -->
                         <div class="d-none d-xl-flex align-items-center">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
@@ -288,31 +318,36 @@
                         </div>
 
                         <!-- Mobile Only Footer in Menu -->
-                        <div class="d-xl-none mt-4">
+                        <div class="d-xl-none mt-2">
                             <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
-                                class="btn btn-warning w-100 rounded-pill mb-2 fw-bold text-dark shadow-sm">
+                                class="btn btn-warning w-100 rounded-pill mb-2 fw-bold text-dark shadow-sm py-2">
                                 <i class="fa-solid fa-user-lock me-2"></i> Franchise Login
                             </a>
                             <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
-                                class="btn btn-primary w-100 rounded-pill mb-3">Enquire Now</a>
-                            <div class="d-flex justify-content-center gap-3 fs-4 mt-3 flex-wrap">
-                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" class="text-secondary"><i
-                                        class="fa-brands fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/ideal_play_abacus_india/" class="text-secondary"><i
-                                        class="fa-brands fa-instagram"></i></a>
-                                <a href="https://x.com/PlayAbacus" class="text-secondary"><i
-                                        class="fa-brands fa-x-twitter"></i></a>
-                                <a href="https://wa.me/919940416989" class="text-secondary"><i
-                                        class="fa-brands fa-whatsapp"></i></a>
+                                class="btn btn-primary w-100 rounded-pill mb-3 py-2">Enquire Now</a>
+
+                            <!-- Divider -->
+                            <hr class="my-4 opacity-25">
+
+                            <h6 class="text-center text-muted fw-bold small text-uppercase mb-3"
+                                style="letter-spacing: 1px;">Follow Us</h6>
+                            <div class="d-flex justify-content-center gap-3 fs-4 flex-wrap">
+                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" class="hover-lift"><i
+                                        class="fa-brands fa-facebook text-primary"></i></a>
+                                <a href="https://www.instagram.com/ideal_play_abacus_india/" class="hover-lift"><i
+                                        class="fa-brands fa-instagram text-danger"></i></a>
+                                <a href="https://x.com/PlayAbacus" class="hover-lift"><i
+                                        class="fa-brands fa-x-twitter text-dark"></i></a>
+                                <a href="https://wa.me/919940416989" class="hover-lift"><i
+                                        class="fa-brands fa-whatsapp text-success"></i></a>
                                 <a target="_blank" rel="noopener noreferrer"
                                     href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"
-                                    class="text-secondary"><i class="fa-brands fa-youtube"></i></a>
+                                    class="hover-lift"><i class="fa-brands fa-youtube text-danger"></i></a>
                                 <a target="_blank" rel="noopener noreferrer"
                                     href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
-                                    class="text-secondary"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    class="hover-lift"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
