--- a/index.html
+++ b/index.html
@@ -289,16 +289,16 @@
                             <div class="d-flex flex-column gap-3 px-2">
                                 <a href="tel:919940416989"
                                     class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
-                                    <div class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center"
-                                        style="width: 35px; height: 35px;">
+                                    <div
+                                        class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center">
                                         <i class="fa-solid fa-phone text-secondary fs-6"></i>
                                     </div>
                                     <span class="fw-semibold">+91 99404 16989</span>
                                 </a>
                                 <a href="mailto:contact@playabacusindia.com"
                                     class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
-                                    <div class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center"
-                                        style="width: 35px; height: 35px;">
+                                    <div
+                                        class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center">
                                         <i class="fa-solid fa-envelope text-secondary fs-6"></i>
                                     </div>
                                     <span class="fw-semibold">contact@playabacusindia.com</span>
